@@ -82,7 +82,10 @@
 #define	ERR_NOARGS	"no args"
 #define	ERR_NOTDIGIT	"not a digit"
 #define	ERR_NOTFOUND	"not found"
+#define	ERR_INTEGER	"integer expected"
+#define	ERR_NOTINTEGER	"not an integer"
 #define	ERR_OPERATOR	"operator expected"
+#define	ERR_RANGE	"out of range"
 #define	ERR_SYNTAX	"syntax error"
 #define	ERR_OPUNKNOWN	"unknown operator"
 #define	ERR_BRACE	"} expected"
